HUB-287:fixing alignment issue

--- a/app/assets/stylesheets/help.scss
+++ b/app/assets/stylesheets/help.scss
@@ -14,6 +14,9 @@
 #hubzone-map-guide h1,h2,h3,h4,h5,h6 {
   font-family: $font-sans;
 }
+.usa-width-three-fourths {
+  margin-right: 0;
+}
 .usa-font-lead {
   font-family: $font-sans;
 }
